--- a/pacman.conf
+++ b/pacman.conf
@@ -82,6 +82,9 @@ Include = /etc/pacman.d/mirrorlist
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
+[addons]
+Server = http://109.164.107.149/holoiso/$repo/$arch/
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
