--- a/efiboot/loader/entries/01-archiso-x86_64-linux.conf
+++ b/efiboot/loader/entries/01-archiso-x86_64-linux.conf
@@ -1,4 +1,4 @@
-title    Arch Linux installer (x86_64, UEFI)
+title    HoloISO installer (x86_64, UEFI)
 sort-key 01
 linux    /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd   /%INSTALL_DIR%/boot/intel-ucode.img
