--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -42,29 +42,13 @@ play 600 988 1 1319 4
 
 # Menu entries
 
-menuentry "Arch Linux installer(x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
+menuentry "HoloISO installer(x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} cow_spacesize=5G nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 copytoram=n nvme_load=yes
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
 if [ "${grub_platform}" == "efi" ]; then
-    if [ "${grub_cpu}" == "x86_64" ]; then
-        menuentry "Run Memtest86+ (RAM test)" --class memtest86 --class memtest --class gnu --class tool {
-            set gfxpayload=800x600,1024x768
-            linux /boot/memtest86+/memtest.efi
-        }
-        menuentry "UEFI Shell" --class efi {
-            insmod chain
-            chainloader /shellx64.efi
-        }
-    elif [ "${grub_cpu}" == "i386" ]; then
-        menuentry "UEFI Shell" --class efi {
-            insmod chain
-            chainloader /shellia32.efi
-        }
-    fi
-
     menuentry 'UEFI Firmware Settings' --id 'uefi-firmware' {
         fwsetup
     }
