--- a/airootfs/etc/systemd/system/getty@tty1.service.d/autologin.conf
+++ b/airootfs/etc/systemd/system/getty@tty1.service.d/autologin.conf
@@ -1,3 +1,2 @@
 [Service]
-ExecStart=
-ExecStart=-/sbin/agetty --noreset --noclear --autologin liveuser - ${TERM}
+ExecStart=-/sbin/agetty --noreset --noclear --autologin holoiso - ${TERM}
