--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -44,7 +44,7 @@ play 600 988 1 1319 4
 
 menuentry "HoloISO installer(x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'holoiso' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} cow_spacesize=5G nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 copytoram=n nvme_load=yes
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} cow_spacesize=5G nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 copytoram=n nvme_load=yes splash quiet
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
