fix the welcome screen + tryna make a grub theme for installer

--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -17,6 +17,12 @@ if loadfont "${prefix}/fonts/unicode.pf2" ; then
     terminal_output console
 fi
 
+# grub theme :3
+
+insmod png
+insmod jpeg
+set theme=/boot/grub/themes/mytheme/theme.txt
+
 # Enable serial console
 if serial --unit=0 --speed=115200; then
     terminal_input --append serial
