--- a/pacman.conf
+++ b/pacman.conf
@@ -37,6 +37,10 @@ Color
 #VerbosePkgLists
 ParallelDownloads = 5
 ILoveCandy
+
+# Cause of speed issues with few devices and arm devices
+DisableDownloadTimeout
+
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
 SigLevel    = Never
